# C_Project

./: .gitignore  C Primer Plus.md  CMakeLists.txt  README.md
code/: 01-platinum.c  02-talkback.c  03-praise.c  04-pizza.c  05-printout.c  06-echo.c  07-guess.c  08-showchar.c  echo
src/: platinum.c
